[gd_scene load_steps=24 format=2]

[ext_resource path="res://menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://menu/menu.theme" type="Theme" id=2]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Kenney Rocket.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/gui/firevaccine.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/firealcohol.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/dash.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/movements.png" type="Texture" id=8]
[ext_resource path="res://assets/menu/covid.png" type="Texture" id=9]
[ext_resource path="res://assets/audio/Menu.mp3" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 95
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 95
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 95
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 64
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 46
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 46
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 46
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 46
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.001
anchor_bottom = 1.002
margin_right = -1.02405
margin_bottom = -1.20007
rect_pivot_offset = Vector2( 960, 540 )
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Background"]
anchor_left = 0.196
anchor_top = 0.23
anchor_right = 0.691
anchor_bottom = 0.438
margin_left = 95.4326
margin_top = -53.5143
margin_right = 95.5526
margin_bottom = -53.3143
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="Background/AspectRatioContainer"]
margin_left = 78.0
margin_right = 429.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "GINA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.413719
anchor_top = 0.478667
anchor_right = 0.628719
anchor_bottom = 0.811667
margin_left = 0.35199
margin_top = -0.200012
margin_right = 220.192
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
custom_constants/separation = 28
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Inicio" type="Button" parent="MainMenu"]
margin_right = 440.0
margin_bottom = 114.0
focus_neighbour_top = NodePath("../Salir")
focus_neighbour_bottom = NodePath("../Configuracion")
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Inicio"

[node name="Configuracion" type="Button" parent="MainMenu"]
margin_top = 142.0
margin_right = 440.0
margin_bottom = 257.0
focus_neighbour_top = NodePath("../Inicio")
focus_neighbour_bottom = NodePath("../Salir")
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = " Configuracion"

[node name="Salir" type="Button" parent="MainMenu"]
margin_top = 285.0
margin_right = 440.0
margin_bottom = 400.0
focus_neighbour_top = NodePath("../Configuracion")
focus_neighbour_bottom = NodePath("../Inicio")
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Salir"

[node name="MenuConfig" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuConfig"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
color = Color( 0.32549, 0.32549, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuConfig"]
anchor_left = 0.343
anchor_top = 0.06
anchor_right = 0.663
anchor_bottom = 0.183
margin_left = -2.73343
margin_top = -29.5278
margin_right = -2.41339
margin_bottom = -29.2918
custom_fonts/font = SubResource( 5 )
text = "Configuraciones"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuOptions" type="VBoxContainer" parent="MenuConfig"]
anchor_left = 0.018
anchor_top = 0.239
anchor_right = 0.99
anchor_bottom = 0.899
margin_left = 49.1545
margin_top = -56.0399
margin_right = 48.8264
margin_bottom = 134.96
rect_scale = Vector2( 0.9, 0.9 )
size_flags_horizontal = 5
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxContainer" type="HBoxContainer" parent="MenuConfig/MainMenuOptions"]
margin_right = 994.0
margin_bottom = 54.0
custom_constants/separation = 25
alignment = 1

[node name="Video" type="Button" parent="MenuConfig/MainMenuOptions/BoxContainer"]
margin_right = 314.0
margin_bottom = 54.0
focus_neighbour_left = NodePath("../../../..")
focus_neighbour_right = NodePath("../Audio")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Video"

[node name="Audio" type="Button" parent="MenuConfig/MainMenuOptions/BoxContainer"]
margin_left = 339.0
margin_right = 654.0
margin_bottom = 54.0
focus_neighbour_left = NodePath("../VideoBtn")
focus_neighbour_right = NodePath("../ControlsBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Audio"

[node name="Controles" type="Button" parent="MenuConfig/MainMenuOptions/BoxContainer"]
margin_left = 679.0
margin_right = 994.0
margin_bottom = 54.0
focus_neighbour_left = NodePath("../AudioBtn")
focus_neighbour_right = NodePath("../VideoBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Controles"

[node name="OptionConfigurations" type="VBoxContainer" parent="MenuConfig/MainMenuOptions"]
margin_top = 79.0
margin_right = 994.0
margin_bottom = 258.0

[node name="VideoConfigurations" type="GridContainer" parent="MenuConfig/MainMenuOptions/OptionConfigurations"]
margin_right = 994.0
margin_bottom = 179.0
rect_min_size = Vector2( 640, 0 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuConfig/MainMenuOptions/OptionConfigurations/VideoConfigurations"]
margin_top = 4.0
margin_right = 794.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
text = "Vsync"

[node name="CheckButton" type="CheckButton" parent="MenuConfig/MainMenuOptions/OptionConfigurations/VideoConfigurations"]
margin_left = 922.0
margin_right = 994.0
margin_bottom = 43.0
size_flags_horizontal = 8
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MenuConfig/MainMenuOptions/OptionConfigurations/VideoConfigurations"]
margin_top = 72.0
margin_right = 794.0
margin_bottom = 107.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 10 )
text = "Pantalla completa"

[node name="CheckBox" type="CheckBox" parent="MenuConfig/MainMenuOptions/OptionConfigurations/VideoConfigurations"]
margin_left = 934.0
margin_top = 68.0
margin_right = 994.0
margin_bottom = 111.0
size_flags_horizontal = 8
text = "on"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MenuConfig/MainMenuOptions/OptionConfigurations/VideoConfigurations"]
margin_top = 140.0
margin_right = 794.0
margin_bottom = 175.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 11 )
text = "Resolucion"

[node name="OptionButton" type="OptionButton" parent="MenuConfig/MainMenuOptions/OptionConfigurations/VideoConfigurations"]
margin_left = 819.0
margin_top = 136.0
margin_right = 994.0
margin_bottom = 179.0
size_flags_horizontal = 8
text = "1920 * 1080"
items = [ "1920 * 1080", null, false, 0, null, "1280 * 720", null, false, 1, null ]
selected = 0

[node name="AudioConfigurations" type="GridContainer" parent="MenuConfig/MainMenuOptions/OptionConfigurations"]
visible = false
margin_top = 183.0
margin_right = 994.0
margin_bottom = 286.0
size_flags_stretch_ratio = 0.0
theme = ExtResource( 2 )
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuConfig/MainMenuOptions/OptionConfigurations/AudioConfigurations"]
margin_top = 4.0
margin_right = 484.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 12 )
text = "Audio"

[node name="CheckButton" type="CheckButton" parent="MenuConfig/MainMenuOptions/OptionConfigurations/AudioConfigurations"]
margin_left = 921.0
margin_right = 993.0
margin_bottom = 43.0
size_flags_horizontal = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="MenuConfig/MainMenuOptions/OptionConfigurations/AudioConfigurations"]
margin_top = 68.0
margin_right = 123.0
margin_bottom = 103.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 13 )
text = "Volumen"

[node name="HSlider" type="HSlider" parent="MenuConfig/MainMenuOptions/OptionConfigurations/AudioConfigurations"]
margin_left = 509.0
margin_top = 68.0
margin_right = 993.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource( 2 )
min_value = -80.0
max_value = 0.0

[node name="KeymapConfigurations" type="GridContainer" parent="MenuConfig/MainMenuOptions/OptionConfigurations"]
visible = false
margin_left = 177.0
margin_top = 183.0
margin_right = 817.0
margin_bottom = 598.0
rect_min_size = Vector2( 640, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuConfig/MainMenuOptions/OptionConfigurations/KeymapConfigurations"]
margin_top = 30.0
margin_right = 158.0
margin_bottom = 65.0
size_flags_horizontal = 0
text = "Movimiento"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moveControls" type="TextureRect" parent="MenuConfig/MainMenuOptions/OptionConfigurations/KeymapConfigurations"]
margin_left = 468.0
margin_right = 640.0
margin_bottom = 96.0
size_flags_horizontal = 12
size_flags_stretch_ratio = 0.0
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="MenuConfig/MainMenuOptions/OptionConfigurations/KeymapConfigurations"]
margin_top = 136.0
margin_right = 235.0
margin_bottom = 171.0
text = "Dash"

[node name="dash" type="TextureRect" parent="MenuConfig/MainMenuOptions/OptionConfigurations/KeymapConfigurations"]
margin_left = 543.0
margin_top = 121.0
margin_right = 640.0
margin_bottom = 187.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
texture = ExtResource( 7 )
stretch_mode = 6

[node name="Label2" type="Label" parent="MenuConfig/MainMenuOptions/OptionConfigurations/KeymapConfigurations"]
margin_top = 239.0
margin_right = 222.0
margin_bottom = 274.0
size_flags_horizontal = 0
text = "Arrojar vacuna"

[node name="fireVaccine" type="TextureRect" parent="MenuConfig/MainMenuOptions/OptionConfigurations/KeymapConfigurations"]
margin_left = 560.0
margin_top = 212.0
margin_right = 640.0
margin_bottom = 301.0
size_flags_horizontal = 12
texture = ExtResource( 5 )

[node name="Label3" type="Label" parent="MenuConfig/MainMenuOptions/OptionConfigurations/KeymapConfigurations"]
margin_top = 353.0
margin_right = 235.0
margin_bottom = 388.0
size_flags_horizontal = 8
text = "Arrojar alcohol"

[node name="fireAlcohol" type="TextureRect" parent="MenuConfig/MainMenuOptions/OptionConfigurations/KeymapConfigurations"]
margin_left = 560.0
margin_top = 326.0
margin_right = 640.0
margin_bottom = 415.0
size_flags_horizontal = 10
texture = ExtResource( 6 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -8.0
autoplay = true

[connection signal="pressed" from="MainMenu/Inicio" to="." method="_on_Inicio_pressed"]
[connection signal="pressed" from="MainMenu/Configuracion" to="." method="_on_Configuracion_pressed"]
[connection signal="pressed" from="MainMenu/Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="MenuConfig/MainMenuOptions/BoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="MenuConfig/MainMenuOptions/BoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="MenuConfig/MainMenuOptions/BoxContainer/Controles" to="." method="_on_Controles_pressed"]
[connection signal="pressed" from="MenuConfig/MainMenuOptions/OptionConfigurations/AudioConfigurations/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="toggled" from="MenuConfig/MainMenuOptions/OptionConfigurations/AudioConfigurations/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="MenuConfig/MainMenuOptions/OptionConfigurations/AudioConfigurations/HSlider" to="." method="_on_HSlider_value_changed"]
